Modified PlayerActivity to not immediately start playing speeches, and instead wait until user clicks play.